Prepare for move to github.com/hhvm/
 - no API changes (yet); those will happen uin the next release
 - change composer package name
 - relicense to ISC + PATENTS
 - update license information in README
 - update all copyright headers

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-  "name": "fredemmott/type-assert",
+  "name": "hhvm/type-assert",
   "description": "Convert untyped data to typed data",
   "keywords": ["hack", "TypeAssert" ],
-  "license": ["ISC"],
   "require": {
     "hhvm": "~3.12"
   },
