--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,12 @@
   "description": "Convert untyped data to typed data",
   "keywords": ["hack", "TypeAssert" ],
   "require": {
-    "hhvm": "~3.12"
+    "hhvm": "~3.12",
+    "facebook/fbexpect": "^0.2.0",
+    "facebook/hhvm-autoload": "^1.4"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.1",
     "91carriage/phpunit-hhi": "~5.1"
-  },
-  "autoload": {
-    "classmap": [
-      "src/"
-    ]
-  },
-  "autoload-dev": {
-    "classmap": [
-      "tests/"
-    ]
   }
 }
