--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "hhvm": "~3.12",
     "facebook/fbexpect": "^0.2.0",
-    "facebook/hhvm-autoload": "^1.4"
+    "facebook/hhvm-autoload": "^1.4",
+    "hhvm/hsl": "^0.2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.1",
