--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
   "keywords": ["hack", "TypeAssert" ],
   "require": {
     "hhvm": "~3.21",
-    "facebook/fbexpect": "^0.2.0",
-    "facebook/hhvm-autoload": "^1.4",
-    "hhvm/hsl": "^0.3"
+    "hhvm/hsl": ">=0.3 <2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.1",
+    "hhvm/hhvm-autoload": "^1.4",
+    "facebook/fbexpect": "^0.2.0 | ^0.3.0",
     "91carriage/phpunit-hhi": "~5.1"
   }
 }
