--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Convert untyped data to typed data",
   "keywords": ["hack", "TypeAssert" ],
   "require": {
-    "hhvm": "~3.21",
+    "hhvm": ">= 3.21.3",
     "hhvm/hsl": ">=0.3 <2.0"
   },
   "require-dev": {
