--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": ["hack", "TypeAssert" ],
   "require": {
     "hhvm": ">= 3.21.3",
-    "hhvm/hsl": ">=0.3 <2.0"
+    "hhvm/hsl": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.1",
