--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Convert untyped data to typed data",
   "keywords": ["hack", "TypeAssert" ],
   "require": {
-    "hhvm": ">= 3.22.0 < 3.23.0",
+    "hhvm": ">= 3.22.0",
     "hhvm/hsl": "^1.0"
   },
   "require-dev": {
