--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "require-dev": {
     "phpunit/phpunit": "~5.1",
     "hhvm/hhvm-autoload": "^1.4",
-    "facebook/fbexpect": "^0.2.0 | ^0.3.0",
+    "facebook/fbexpect": "^0.2.0 | ^0.3.0 | ^0.4.0",
     "91carriage/phpunit-hhi": "~5.1"
   }
 }
