--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
   "require": {
     "hhvm": "^3.23.0",
     "hhvm/hhvm-autoload": "^1.4",
-    "hhvm/hsl": "^1.0"
+    "hhvm/hsl": "^1.0|^3.26.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.1",
-    "facebook/fbexpect": "^0.2.0 | ^0.3.0 | ^0.4.0",
+    "facebook/fbexpect": "^0.4.0|^1.0.0",
     "91carriage/phpunit-hhi": "~5.1"
   }
 }
