--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,15 @@
     "hhvm/hhvm-autoload": "^1.4",
     "hhvm/hsl": "^1.0|^3.26.0"
   },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.x-dev"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "~5.1",
     "facebook/fbexpect": "^0.4.0|^1.0.0",
-    "91carriage/phpunit-hhi": "~5.1"
+    "91carriage/phpunit-hhi": "~5.1",
+    "hhvm/hhast": "^3.27"
   }
 }
