--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "keywords": ["hack", "TypeAssert" ],
   "require": {
-    "hhvm": "^3.23.0",
+    "hhvm": "^3.29.0",
     "hhvm/hhvm-autoload": "^1.4",
-    "hhvm/hsl": "^1.0|^3.26.0"
+    "hhvm/hsl": "^3.29.0"
   },
   "extra": {
     "branch-alias": {
