--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 language: generic
 services: docker
 env:
+- HHVM_VERSION=4.1-latest
 - HHVM_VERSION=latest
 - HHVM_VERSION=nightly
 install:
