--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: generic
 services: docker
 env:
 - HHVM_VERSION=4.1-latest
+- HHVM_VERSION=4.6-latest
+- HHVM_VERSION=4.8-latest
 - HHVM_VERSION=latest
 - HHVM_VERSION=nightly
 install:
