--- a/.hhconfig
+++ b/.hhconfig
@@ -7,4 +7,7 @@ disallow_destruct = true
 disallow_invalid_arraykey = true
 disallow_stringish_magic = true
 user_attributes=
-disallow_array_literal = true
+
+; The tests require many php arrays to get good coverage.
+; This setting is intentionally turned off.
+disallow_array_literal = false
