--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   },
   "require-dev": {
-    "hhvm/hhvm-autoload": "^2.0",
+    "hhvm/hhvm-autoload": "^2.0|^3.0",
     "facebook/fbexpect": "^2.0.0",
     "hhvm/hacktest": "^2.0",
     "hhvm/hhast": "^4.0"
