use shared github action

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,46 +24,6 @@ jobs:
           if [ ! -e .git/refs/heads/master ]; then
             git branch master HEAD
           fi
-      - name: Install Composer
-        run: .github/workflows/install-composer.sh --install-dir=${{runner.temp}}
-      - name: Install HHVM (apt)
-        if: matrix.os == 'ubuntu'
-        run: |
-          set -ex
-          export DEBIAN_FRONTEND=noninteractive
-          sudo add-apt-repository https://dl.hhvm.com/ubuntu
-          if [ "${{matrix.hhvm}}" = "nightly" ]; then
-            sudo apt-get remove hhvm
-            sudo apt-get install -y hhvm-nightly
-          elif [ "${{matrix.hhvm}}" = "latest" ]; then
-            sudo apt-get install -y hhvm
-          else
-            sudo add-apt-repository --remove https://dl.hhvm.com/ubuntu
-            sudo apt-get remove hhvm
-            DISTRO=$(lsb_release --codename --short)
-            sudo add-apt-repository \
-              "deb https://dl.hhvm.com/ubuntu ${DISTRO}-${{matrix.hhvm}} main"
-            sudo apt-get install -y hhvm
-          fi
-      - name: Install HHVM (brew)
-        if: matrix.os == 'macos'
-        run: |
-          brew tap hhvm/hhvm
-          if [ "${{matrix.hhvm}}" = "latest" ]; then
-            brew install hhvm
-          else
-            brew install hhvm-${{matrix.hhvm}}
-          fi
-      - name: Inspect HHVM and Hack versions
-        run: |
-          hhvm --version
-          hh_client --version
-      - name: Install project dependencies
-        run: php ${{runner.temp}}/composer.phar install
-      - name: Typecheck
-        run: hh_client
-      - name: Run tests
-        run: vendor/bin/hacktest tests
-      - name: Run lint
-        if: matrix.hhvm != 'nightly'
-        run: vendor/bin/hhast-lint
+      - uses: hhvm/actions/hack-lint-test@master
+        with:
+          hhvm: ${{matrix.hhvm}}
