--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "4.x-dev"
+      "dev-master": "4.x-dev",
+      "dev-main": "4.x-dev"
     }
   },
   "require-dev": {
