--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "keywords": ["hack", "TypeAssert"],
   "require": {
-    "hhvm": "^4.115",
+    "hhvm": "^4.128",
     "hhvm/hsl": "^4.0"
   },
   "extra": {
@@ -18,5 +18,10 @@
     "facebook/fbexpect": "^2.0.0",
     "hhvm/hacktest": "^2.0",
     "hhvm/hhast": "^4.0"
+  },
+  "config": {
+    "allow-plugins": {
+      "hhvm/hhvm-autoload": true
+    }
   }
 }
