--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "keywords": ["hack", "TypeAssert"],
   "require": {
-    "hhvm": "^4.128",
-    "hhvm/hsl": "^4.0"
+    "hhvm": "^4.128"
   },
   "extra": {
     "branch-alias": {
