Don't look for ubuntu-20.04-latest
There is no such runner, so the task waits forever to start. Whoops!

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,7 @@ jobs:
           - "4.128"
           - latest
           - nightly
-    runs-on: ${{matrix.os}}-latest
+    runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
       - uses: hhvm/actions/hack-lint-test@master
